--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.13)  # CMake version check
-project(simple_example)               # Create project "runner"
+project(runner)                       # Create project "runner"
+
 set(CMAKE_CXX_STANDARD 17)            # Enable c++14 standard
 
 include_directories("${PROJECT_SOURCE_DIR}/inc/")
 # Add executable target with source files listed in SOURCE_FILES variable
-add_executable(filewatcher/index.h core/index.h core/index.cpp filewatcher/index.cpp index.cpp)
+add_executable(runner filewatcher/index.h core/index.h core/index.cpp filewatcher/index.cpp index.cpp)
