--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required(VERSION 3.13)  # CMake version check
-project(runner)                       # Create project "runner"
+project(runner)
 
-set(CMAKE_CXX_STANDARD 17)            # Enable c++14 standard
+include_directories(${PROJECT_SOURCE_DIR})
 
-include_directories("${PROJECT_SOURCE_DIR}/inc/")
-# Add executable target with source files listed in SOURCE_FILES variable
-add_executable(runner filewatcher/index.h core/index.h core/index.cpp filewatcher/index.cpp index.cpp)
+set(CMAKE_CXX_STANDARD 17)            # Enable c++17 standard
+set(SOURCE_FILES src/filewatcher/index.cpp src/core/index.cpp src/constants/index.cpp src/cli/index.cpp index.cpp)
+
+add_executable(runner ${SOURCE_FILES})
+
+target_link_libraries(${PROJECT_NAME} jsoncpp)
